# csvtopg

./: .gitignore  README.md  pyproject.toml
csvtopg/: __init__.py  csvtopg.py
pg/: __init__.py  main.py
tools/: __init__.py  dframes.py  main.py  mappings.py
