[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandaspg"
version = "0.0.1"
authors = [
  { name="Adolfo Jimenez", email="adolfoj@protonmail.com" },
]
description = "A package that contains several functions for interacting with a PostgreSQL database using Python and the Pandas library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eadwulf/pandaspg"
"Bug Tracker" = "https://github.com/eadwulf/pandaspg/issues"